--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -32,7 +32,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Quant
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Advertising/Advertising.list, tag=广告拦截, force-policy=reject, update-interval=86400, opt-parser=true, enabled=true
 
 # Apple 服务
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=苹果服务, force-policy=direct, update-interval=86400, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=苹果服务, force-policy=DIRECT, update-interval=86400, opt-parser=true, enabled=true
 
 # Global 全球加速
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Global/Global.list, tag=全球规则, force-policy=全球加速, update-interval=86400, opt-parser=true, enabled=true
@@ -63,11 +63,11 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Quant
 
 [filter_local]
 # 解决 郑好办 白屏
-HOST-KEYWORD, cnzz, direct
+HOST-KEYWORD, cnzz, DIRECT
 # github加速
-HOST, ghproxy.com, direct
+HOST, ghproxy.com, DIRECT
 
-geoip, cn, direct
+geoip, cn, DIRECT
 final, 黑白名单
 
 
