--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -12,8 +12,8 @@ server=119.29.29.29
 server=223.5.5.5
 
 [policy]
-static=🚀 节点选择, ♻️ 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Available.png
-url-latency-benchmark=♻️ 自动选择, server-tag-regex=.*, check-interval=600, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
+static=🚀 节点选择, ♻️ 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Available.png
+url-latency-benchmark=♻️ 自动选择, server-tag-regex=.*, check-interval=600, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Auto.png
 
 static=🐟 漏网之鱼, 🚀 节点选择, ♻️ 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 url-latency-benchmark=香港节点, server-tag-regex=(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|美)).)*$, check-interval=600, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
@@ -58,7 +58,7 @@ https://raw.githubusercontent.com/zZPiglet/Task/master/UnblockURLinWeChat.conf, 
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/qxrewrite/Weather.qxrewrite, tag=苹果天气
 
 # Block Advertising
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Advertising/Advertising.list, tag=Advertising, update-interval=86400, opt-parser=false, enabled=false
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Advertising/Advertising.list, tag=Advertising, update-interval=86400, opt-parser=true, enabled=true
 
 [server_local]
 
