--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -36,7 +36,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Quant
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=苹果服务, force-policy=DIRECT, update-interval=86400, opt-parser=true, enabled=true
 
 # Global 全球加速
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Global/Global.list, tag=全球规则, force-policy=黑白名单, update-interval=86400, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Global/Global.list, tag=全球规则, force-policy= 🐟 漏网之鱼, update-interval=86400, opt-parser=true, enabled=true
 
 # China 中国直连
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/China/China.list, tag=全球直连, force-policy=DIRECT, update-interval=86400, opt-parser=true, enabled=true
