--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -10,6 +10,7 @@ no-system
 no-ipv6
 server=119.29.29.29
 server=223.5.5.5
+doh-server=quic://c.passcloud.xyz:784,quic://b.iqiq.io:784,quic://j.iqiq.io:784,quic://h.iqiq.io:784
 
 [policy]
 static=🚀 节点选择, ♻️ 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Available.png
