--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -10,7 +10,7 @@ no-system
 no-ipv6
 server=119.29.29.29
 server=223.5.5.5
-doh-server=quic://c.passcloud.xyz:784,quic://b.iqiq.io:784,quic://j.iqiq.io:784,quic://h.iqiq.io:784
+doq-server=quic://c.passcloud.xyz:784,quic://b.iqiq.io:784,quic://j.iqiq.io:784,quic://h.iqiq.io:784
 
 [policy]
 static=🚀 节点选择, ♻️ 自动选择, 香港节点, 台湾节点, 日本节点, 美国节点, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Available.png
@@ -59,7 +59,7 @@ https://raw.githubusercontent.com/zZPiglet/Task/master/UnblockURLinWeChat.conf, 
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/qxrewrite/Weather.qxrewrite, tag=苹果天气
 
 # Block Advertising
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Advertising/Advertising.list, tag=Advertising, update-interval=86400, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/Advertising/Advertising.conf, tag=重写去广告, update-interval=86400, opt-parser=true, enabled=true
 
 [server_local]
 
